--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorPrimaryDark">#3949ab</color>
     <color name="colorAccent">#00bcd4</color>
     <color name="backGround">#BBDEFB</color>
+    <color name="cardviewBackGround">#7192AD</color>
 </resources>
