--- a/app/src/main/res/layout/weather_time_item.xml
+++ b/app/src/main/res/layout/weather_time_item.xml
@@ -57,7 +57,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/TimeItemFcstargin"
+            android:layout_marginStart="@dimen/TimeItemFcstMargin"
             android:layout_toEndOf="@+id/itemTimeDate"
             android:gravity="center">
 
