--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="@color/white"
+            android:layout_marginStart="@dimen/SearchButtonMargin"
+            android:drawableLeft="@drawable/ic_baseline_search_24"
             android:textSize="@dimen/MainText"/>
 
         <androidx.viewpager2.widget.ViewPager2
@@ -37,31 +39,6 @@
             android:layout_alignParentBottom="true"
             android:textSize="@dimen/MainText"/>
     </LinearLayout>
-<!--    <RelativeLayout-->
-<!--        android:id="@+id/address"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
-
-<!--        <Button-->
-<!--            android:id="@+id/buttonMap"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@color/white"-->
-<!--            android:textSize="16dp"/>-->
-<!--    </RelativeLayout>-->
-
-<!--    <com.google.android.material.tabs.TabLayout-->
-<!--        android:id="@+id/weatherTab"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentBottom="true"/>-->
-
-<!--    <androidx.viewpager2.widget.ViewPager2-->
-<!--        android:id="@+id/weatherViewPager"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_below="@+id/address"-->
-<!--        android:layout_above="@+id/weatherTab"/>-->
 
     <FrameLayout
         android:id="@+id/naverMapFragmnet"
