--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textSize="30sp"
-        android:text="Loading"/>
+        android:textSize="@dimen/Loading"
+        android:text="@string/loading"/>
 
 </RelativeLayout>
