--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -73,21 +73,25 @@
                                 android:id="@+id/rltmCardTV1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textColor="@color/white"
                                 android:textSize="@dimen/IndexValueSize"/>
                             <TextView
                                 android:id="@+id/rltmCardTV2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textColor="@color/white"
                                 android:textSize="@dimen/IndexValueSize"/>
                             <TextView
                                 android:id="@+id/rltmCardTV3"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textColor="@color/white"
                                 android:textSize="@dimen/IndexValueSize"/>
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -105,94 +109,79 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textStyle="bold"
                     android:text="@string/airQualityTitle"
-                    android:textSize="@dimen/IndexTitle"/>
+                    android:textSize="@dimen/IndexTitle"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/airDateAndCode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:layout_margin="5dp"
-                    android:textSize="@dimen/IndexAirDateCode"/>
+                    android:layout_margin="@dimen/AirQualityDefaultMargin"
+                    android:textSize="@dimen/IndexAirDateCode" />
 
                 <TextView
                     android:id="@+id/informCause"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
-                    android:layout_margin="5dp"
-                    android:textSize="@dimen/IndexAirQuality"/>
+                    android:layout_margin="@dimen/AirQualityDefaultMargin"
+                    android:textSize="@dimen/IndexAirQuality" />
 
                 <TextView
                     android:id="@+id/informOverall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
-                    android:layout_margin="5dp"
-                    android:textSize="@dimen/IndexAirQuality"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:weightSum="3">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/airRecyclerView1"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/airRecyclerView2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/airRecyclerView3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-                </LinearLayout>
+                    android:layout_margin="@dimen/AirQualityDefaultMargin"
+                    android:textSize="@dimen/IndexAirQuality" />
 
                 <TextView
                     android:id="@+id/actionKnack"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
-                    android:layout_margin="5dp"
-                    android:textSize="@dimen/IndexAirQuality"/>
+                    android:layout_margin="@dimen/AirQualityDefaultMargin"
+                    android:textSize="@dimen/IndexAirQuality" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3">
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/airRecyclerView1"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/airRecyclerView2"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/airRecyclerView3"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="시간대별 예측 모델"
-                    android:textSize="@dimen/ViewPagerImageTitle"/>
+                    android:textSize="@dimen/ViewPagerImageTitle" />
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/pm10VP2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"/>
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/pm25VP2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"/>
+                    android:orientation="horizontal"
+                    android:clipToPadding="false"
+                    android:clipChildren="false"/>
 
             </LinearLayout>
         </LinearLayout>
