--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="@color/white"
-            android:layout_marginStart="@dimen/SearchButtonMargin"
+            android:paddingStart="@dimen/SearchButtonPadding"
             android:drawableLeft="@drawable/ic_baseline_search_24"
             android:textSize="@dimen/MainText"/>
 
