--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -98,7 +98,6 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/now_dot_line"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/imageLoadFail"
@@ -169,10 +168,20 @@
                             android:layout_weight="1" />
                 </LinearLayout>
 
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/imageLoadFail"
+                    android:src="@drawable/dotted_line_long" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="시간대별 예측 모델"
+                    android:layout_marginEnd="@dimen/AirQualityDefaultMargin"
+                    android:layout_marginTop="@dimen/AirQualityDefaultMargin"
+                    android:layout_marginBottom="@dimen/AirQualityDefaultMargin"
+                    android:textStyle="bold"
                     android:textSize="@dimen/ViewPagerImageTitle" />
 
                 <androidx.viewpager2.widget.ViewPager2
